(1) Change forceReloadSolrIndexed to forceReloadSolrIndex (2) add the cecho() function (3) make sure the script is ran using php cli

--- a/sync.ini
+++ b/sync.ini
@@ -51,7 +51,7 @@ memory = 256
 ;                 This parameter will be considered when: forceReload = "true"
 ;                 IMPORTANT NOTE: this means that all the modifications that haven't been
 ;                                 saved in the serialized file used by the DSF will be lost!!
-; (14) [Optional] The "forceReloadSolrIndexed" parameter is used to specify that each time sync.php is run
+; (14) [Optional] The "forceReloadSolrIndex" parameter is used to specify that each time sync.php is run
 ;                 that we want to reload the content of the dataset in Solr. This means that the data
 ;                 in the triple store is unchanged, but that the dataset in Solr is delete and
 ;                 re-created from what is indexed in the triple store. This means that the data
