Adding some comments for some configuration options

--- a/sync.ini
+++ b/sync.ini
@@ -6,9 +6,19 @@
 ; with this newly updated file.
 
 [config]
+
+; Folder where the structWSF-PHP-API is located. This has to be the folder where the 
+; the top "StructuredDynamics" folder appears
 structwsfFolder = "/usr/share/structwsf/"  ; with trailing slash
+
+; Folder where the checksum of the dataset files are saved
 indexesFolder = "/data/sync/datasetIndexes/" ; with trailing slash
+
+; Folder where the propertyHierarchySerialized.srz and the classHierarchySerialized.srz
+; files are located on your server
 ontologiesStructureFiles = "/data/ontologies/structure/" ; with trailing slash
+
+; Folder where the missing vocabulary properties and classes are logged
 missingVocabulary = "/data/sync/missing/" ; with trailing slash
 
 ; Memory available by the script to run. The number is in megabytes.
