Create a new branch for the DMT version 3.0. This new version will work with the new OSF 3.0 version and its new folder structure.

--- a/sync.ini
+++ b/sync.ini
@@ -7,19 +7,19 @@
 
 [config]
 
-; Folder where the structWSF-PHP-API is located. This has to be the folder where the 
+; Folder where the OSF-WS-PHP-API is located. This has to be the folder where the 
 ; the top "StructuredDynamics" folder appears
-structwsfFolder = "/usr/share/structwsf/"  ; with trailing slash
+osfWebServicesFolder = "/usr/share/osf/"  ; with trailing slash
 
 ; Folder where the checksum of the dataset files are saved
-indexesFolder = "/data/sync/datasetIndexes/" ; with trailing slash
+indexesFolder = "/usr/share/datasets-management-tool/datasetIndexes/" ; with trailing slash
 
 ; Folder where the propertyHierarchySerialized.srz and the classHierarchySerialized.srz
 ; files are located on your server
 ontologiesStructureFiles = "/data/ontologies/structure/" ; with trailing slash
 
 ; Folder where the missing vocabulary properties and classes are logged
-missingVocabulary = "/data/sync/missing/" ; with trailing slash
+missingVocabulary = "/usr/share/datasets-management-tool/missing/" ; with trailing slash
 
 ; Memory available by the script to run. The number is in megabytes.
 memory = 256
@@ -28,7 +28,7 @@ memory = 256
 ;
 ; (1) [Required] Each processing section is a dataset to be synched by the script. The name of
 ;                the synching request should be defined between brackets.
-; (2) [Required] The "datasetURI" parameter is the URI of the dataset to update in the structWSF
+; (2) [Required] The "datasetURI" parameter is the URI of the dataset to update in the OSF Web Services
 ;                instance
 ; (3) [Required] The "baseURI" parameter is the base URI of the records that get converted.
 ; (4) [Required] The "datasetLocalPath" parameter is the local path folder where the files of
@@ -43,7 +43,7 @@ memory = 256
 ; (8) [Optional] The "baseOntologyURI" parameter is used by the converter of the dataset to
 ;                properly create the new properties and classes while converting the dataset.
 ;                This parameter is optional to some converter.
-; (9) [Optional] The "sliceSize" defines the number of record to send to the CRUD: Create structWSF
+; (9) [Optional] The "sliceSize" defines the number of record to send to the CRUD: Create OSF Web Services
 ;                endpoint at each time. Tweaking this parameter have an impact on the performences
 ;                for the syncing process.
 ; (10) [Optional] The "filteredFiles" parameter is used to filter down to a file, or a set
@@ -51,13 +51,13 @@ memory = 256
 ; (11) [Optional] The "filteredFilesRegex" has the same behavior as the "filteredFiles" parameter
 ;                 but it does match files to include into the dataset based on a regex patter.
 ;                 This parameter has priority on "filteredFiles".
-; (12) [Required] The "targetStructWSF" parameter is the URL of the structWSF instance where the records have to be created. 
-;                 Note that the dataset has to be existing on that structWSF instance before running 
+; (12) [Required] The "targetOSFWebServices" parameter is the URL of the OSF Web Services instance where the records have to be created. 
+;                 Note that the dataset has to be existing on that OSF Web Services instance before running 
 ;                 the syncing script. Also note that the server that perform the sync has to have the 
-;                 proper rights to write information into that dataset on that structWSF instance.
+;                 proper rights to write information into that dataset on that OSF Web Services instance.
 ; (13) [Optional] The "forceReload" parameter is used to specify that each time sync.php is run
 ;                 that we want to reload the dataset. Reloading the dataset means that the
-;                 dataset get deleted, recreated and re-imported into the structWSF instance.
+;                 dataset get deleted, recreated and re-imported into the OSF Web Services instance.
 ;                 This parameter will be considered when: forceReload = "true"
 ;                 IMPORTANT NOTE: this means that all the modifications that haven't been
 ;                                 saved in the serialized file used by the DSF will be lost!!
@@ -68,10 +68,10 @@ memory = 256
 ;                 doesn't change. This should be used for re-indexing data into Solr. This normally
 ;                 happen each time we change the Solr index, or each time we modify the way
 ;                 CRUD: Create or CRUD: Update index content in Solr.
-; (15) [Optional] The "targetStructWSFQueryExtension" parameter is used to specify a possible QuerierExtension
-;                 if it is required by the structWSF instance to query. You have to specify the full QuerierExtension
+; (15) [Optional] The "targetOSFWebServicesQueryExtension" parameter is used to specify a possible QuerierExtension
+;                 if it is required by the OSF Web Services instance to query. You have to specify the full QuerierExtension
 ;                 which includes the possible namespace in it, like: 
-;                   "StructuredDynamics\structwsf\framework\FooQuerierExtension"
+;                   "StructuredDynamics\osf\framework\FooQuerierExtension"
 ; (16) [Required] The "title" parameter is used to specify the title to use if the dataset needs to be
 ;                 created by the Dataset Synchronization Framework.
 ; (17) [Required] The "description" parameter is used to specify the description to use if the dataset needs to be
@@ -82,13 +82,13 @@ memory = 256
 [Foo-Dataset]
 datasetURI = "http://foobar.com/datasets/documents/"
 baseURI = "http://foobar.com/datasets/documents/"
-datasetLocalPath = "/data/sync/data/"
-converterPath = "/data/sync/converters/default/"
+datasetLocalPath = "/usr/share/datasets-management-tool/data/"
+converterPath = "/usr/share/datasets-management-tool/converters/default/"
 converterScript = "defaultConverter.php"
 converterFunctionName = "defaultConverter"
 baseOntologyURI = "http://purl.org/ontology/foo#"
 sliceSize = "50"
-targetStructWSF = "https://foobar.com/ws/"
+targetOSFWebServices = "http://foobar.com/ws/"
 filteredFiles = "my-serialized-dataset-records.n3"
 forceReload = "true"
 title = "This is the title of my new dataset"
