Update the DMT for using the new security layer in the OSF Web Services.

--- a/dmt.ini
+++ b/dmt.ini
@@ -24,6 +24,18 @@ missingVocabulary = "/usr/share/datasets-management-tool/missing/" ; with traili
 ; Memory available by the script to run. The number is in megabytes.
 memory = 256
 
+; Credentials information required by the DMT to connect to the OSF Web Services endpoints
+[credentials]
+
+; Application ID of the DMT
+application-id = "administer"
+
+; API-KEY of the DMT
+api-key = "some-key"
+
+; User URI used by the DMT to operate with the endpoints
+user = "http://localhost/wsf/users/admin"
+
 ; This setup INI file:
 ;
 ; (1) [Required] Each processing section is a dataset to be synched by the script. The name of
