Update default values for the sync.ini file.

--- a/sync.ini
+++ b/sync.ini
@@ -12,14 +12,14 @@
 structwsfFolder = "/usr/share/structwsf/"  ; with trailing slash
 
 ; Folder where the checksum of the dataset files are saved
-indexesFolder = "/data/sync/datasetIndexes/" ; with trailing slash
+indexesFolder = "/usr/share/datasets-management-tool/datasetIndexes/" ; with trailing slash
 
 ; Folder where the propertyHierarchySerialized.srz and the classHierarchySerialized.srz
 ; files are located on your server
 ontologiesStructureFiles = "/data/ontologies/structure/" ; with trailing slash
 
 ; Folder where the missing vocabulary properties and classes are logged
-missingVocabulary = "/data/sync/missing/" ; with trailing slash
+missingVocabulary = "/usr/share/datasets-management-tool/missing/" ; with trailing slash
 
 ; Memory available by the script to run. The number is in megabytes.
 memory = 256
@@ -82,13 +82,13 @@ memory = 256
 [Foo-Dataset]
 datasetURI = "http://foobar.com/datasets/documents/"
 baseURI = "http://foobar.com/datasets/documents/"
-datasetLocalPath = "/data/sync/data/"
-converterPath = "/data/sync/converters/default/"
+datasetLocalPath = "/usr/share/datasets-management-tool/data/"
+converterPath = "/usr/share/datasets-management-tool/converters/default/"
 converterScript = "defaultConverter.php"
 converterFunctionName = "defaultConverter"
 baseOntologyURI = "http://purl.org/ontology/foo#"
 sliceSize = "50"
-targetStructWSF = "https://foobar.com/ws/"
+targetStructWSF = "http://foobar.com/ws/"
 filteredFiles = "my-serialized-dataset-records.n3"
 forceReload = "true"
 title = "This is the title of my new dataset"
