(1) Update the default converter to be able to define the URI of multiple groups for which we want to give full CRUD permissions when we create a new dataset using the dmt (2) Better write the dmt.ini documentation (3) Update the dmt.ini file to use the new groups[] INI setting

--- a/dmt.ini
+++ b/dmt.ini
@@ -38,58 +38,63 @@ user = "http://localhost/wsf/users/admin"
 
 ; This setup INI file:
 ;
-; (1) [Required] Each processing section is a dataset to be synched by the script. The name of
-;                the synching request should be defined between brackets.
-; (2) [Required] The "datasetURI" parameter is the URI of the dataset to update in the OSF Web Services
-;                instance
-; (3) [Required] The "baseURI" parameter is the base URI of the records that get converted.
-; (4) [Required] The "datasetLocalPath" parameter is the local path folder where the files of
-;                the dataset are archived.
-; (5) [Required] The "converterPath" parameter is the path where all files of the converter are
-;                located.
-; (6) [Required] The "converterScript" parameter is the name of the converter PHP script to run
-; (7) [Required] The "converterFunctionName" is the name of the function to call that will
-;                convert a list of fils into RDF. It takes two parameters, the first one is the
-;                path of a file to conver and the second parameter is the parsed INI processing
-;                section of this file for this dataset.
-; (8) [Optional] The "baseOntologyURI" parameter is used by the converter of the dataset to
-;                properly create the new properties and classes while converting the dataset.
-;                This parameter is optional to some converter.
-; (9) [Optional] The "sliceSize" defines the number of record to send to the CRUD: Create OSF Web Services
-;                endpoint at each time. Tweaking this parameter have an impact on the performences
-;                for the syncing process.
-; (10) [Optional] The "filteredFiles" parameter is used to filter down to a file, or a set
-;                of files for that dataset. Each file name are seperated by a semi-colon ";".
-; (11) [Optional] The "filteredFilesRegex" has the same behavior as the "filteredFiles" parameter
-;                 but it does match files to include into the dataset based on a regex patter.
-;                 This parameter has priority on "filteredFiles".
-; (12) [Required] The "targetOSFWebServices" parameter is the URL of the OSF Web Services instance where the records have to be created. 
-;                 Note that the dataset has to be existing on that OSF Web Services instance before running 
-;                 the syncing script. Also note that the server that perform the sync has to have the 
-;                 proper rights to write information into that dataset on that OSF Web Services instance.
-; (13) [Optional] The "forceReload" parameter is used to specify that each time sync.php is run
-;                 that we want to reload the dataset. Reloading the dataset means that the
-;                 dataset get deleted, recreated and re-imported into the OSF Web Services instance.
-;                 This parameter will be considered when: forceReload = "true"
-;                 IMPORTANT NOTE: this means that all the modifications that haven't been
-;                                 saved in the serialized file used by the DSF will be lost!!
-; (14) [Optional] The "forceReloadSolrIndex" parameter is used to specify that each time sync.php is run
-;                 that we want to reload the content of the dataset in Solr. This means that the data
-;                 in the triple store is unchanged, but that the dataset in Solr is delete and
-;                 re-created from what is indexed in the triple store. This means that the data
-;                 doesn't change. This should be used for re-indexing data into Solr. This normally
-;                 happen each time we change the Solr index, or each time we modify the way
-;                 CRUD: Create or CRUD: Update index content in Solr.
-; (15) [Optional] The "targetOSFWebServicesQueryExtension" parameter is used to specify a possible QuerierExtension
-;                 if it is required by the OSF Web Services instance to query. You have to specify the full QuerierExtension
-;                 which includes the possible namespace in it, like: 
-;                   "StructuredDynamics\osf\framework\FooQuerierExtension"
-; (16) [Required] The "title" parameter is used to specify the title to use if the dataset needs to be
-;                 created by the Dataset Synchronization Framework.
-; (17) [Required] The "description" parameter is used to specify the description to use if the dataset needs to be
-;                 created by the Dataset Synchronization Framework.
-; (18) [Required] The "creator" parameter is used to specify the creator's URI to use if the dataset needs to be
-;                 created by the Dataset Synchronization Framework.
+; Each processing section is a dataset to be synched by the script. The name of
+; the synching request should be defined between brackets.
+;
+; "datasetURI"                         [Required] The "datasetURI" parameter is the URI of the dataset to update in the OSF Web Services
+;                                                 instance
+; "baseURI"                            [Required] The "baseURI" parameter is the base URI of the records that get converted.
+; "datasetLocalPath"                   [Required] The "datasetLocalPath" parameter is the local path folder where the files of
+;                                                 the dataset are archived.
+; "converterPath"                      [Required] The "converterPath" parameter is the path where all files of the converter are
+;                                                 located.
+; "converterScript"                    [Required] The "converterScript" parameter is the name of the converter PHP script to run
+; "converterFunctionName"              [Required] The "converterFunctionName" is the name of the function to call that will
+;                                                 convert a list of fils into RDF. It takes two parameters, the first one is the
+;                                                 path of a file to conver and the second parameter is the parsed INI processing
+;                                                 section of this file for this dataset.
+; "baseOntologyURI"                    [Optional] The "baseOntologyURI" parameter is used by the converter of the dataset to
+;                                                 properly create the new properties and classes while converting the dataset.
+;                                                 This parameter is optional to some converter.
+; "sliceSize"                          [Optional] The "sliceSize" defines the number of record to send to the CRUD: Create OSF Web Services
+;                                                 endpoint at each time. Tweaking this parameter have an impact on the performences
+;                                                 for the syncing process.
+; "filteredFiles"                      [Optional] The "filteredFiles" parameter is used to filter down to a file, or a set
+;                                                 of files for that dataset. Each file name are seperated by a semi-colon ";".
+; "filteredFilesRegex"                 [Optional] The "filteredFilesRegex" has the same behavior as the "filteredFiles" parameter
+;                                                 but it does match files to include into the dataset based on a regex patter.
+;                                                 This parameter has priority on "filteredFiles".
+; "targetOSFWebServices                [Required] The "targetOSFWebServices" parameter is the URL of the OSF Web Services instance where the records have to be created. 
+;                                                 Note that the dataset has to be existing on that OSF Web Services instance before running 
+;                                                 the syncing script. Also note that the server that perform the sync has to have the 
+;                                                 proper rights to write information into that dataset on that OSF Web Services instance.
+; "forceReload"                        [Optional] The "forceReload" parameter is used to specify that each time sync.php is run
+;                                                 that we want to reload the dataset. Reloading the dataset means that the
+;                                                 dataset get deleted, recreated and re-imported into the OSF Web Services instance.
+;                                                 This parameter will be considered when: forceReload = "true"
+;                                                 IMPORTANT NOTE: this means that all the modifications that haven't been
+;                                                 saved in the serialized file used by the DSF will be lost!!
+; "forceReloadSolrIndex"               [Optional] The "forceReloadSolrIndex" parameter is used to specify that each time sync.php is run
+;                                                 that we want to reload the content of the dataset in Solr. This means that the data
+;                                                 in the triple store is unchanged, but that the dataset in Solr is delete and
+;                                                 re-created from what is indexed in the triple store. This means that the data
+;                                                 doesn't change. This should be used for re-indexing data into Solr. This normally
+;                                                 happen each time we change the Solr index, or each time we modify the way
+;                                                 CRUD: Create or CRUD: Update index content in Solr.
+; "targetOSFWebServicesQueryExtension" [Optional] The "targetOSFWebServicesQueryExtension" parameter is used to specify a 
+;                                                 possible QuerierExtension if it is required by the OSF Web Services instance 
+;                                                 to query. You have to specify the full QuerierExtension
+;                                                 which includes the possible namespace in it, like: 
+;                                                 "StructuredDynamics\osf\framework\FooQuerierExtension"
+; "title"                              [Required] The "title" parameter is used to specify the title to use if the dataset needs to be
+;                                                 created by the Dataset Synchronization Framework.
+; "description"                        [Required] The "description" parameter is used to specify the description to use if the dataset needs to be
+;                                                 created by the Dataset Synchronization Framework.
+; "creator"                            [Required] The "creator" parameter is used to specify the creator's URI to use if the dataset needs to be
+;                                                 created by the Dataset Synchronization Framework.
+; "groups[]"                           [Required] The "groups" parameter is used to specify the list of initial user group that will have the full CRUD
+;                                                 permissions on that newly created dataset. If the dataset was already existing, then the previously
+;                                                 defined permissions will be used.
 
 [Foo-Dataset]
 datasetURI = "http://foobar.com/datasets/documents/"
@@ -106,4 +111,5 @@ forceReload = "true"
 title = "This is the title of my new dataset"
 description = "This is a description of my new dataset"
 creator = "http://foobar.com/user/1"
-
+groups[] = "http://foobar.com/role/3/administrator"
+groups[] = "http://foobar.com/wsf/groups/administrators"
